--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="src/styles.css">
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 
 <body>
@@ -143,7 +143,7 @@
         </div>
     </footer>
 
-    <script type="module" src="/js/script.js"></script>
+    <script src="/js/script.js"></script>
     <script type="module" src="src/main.js"></script>
 </body>
 
