--- a/index.html
+++ b/index.html
@@ -57,10 +57,6 @@
                     <span class="skill-name">Bootstrap</span>
                 </div>
                 <div class="skill-card">
-                    <img src="/images/latex.svg" alt="LATEX" class="skill-icon" />
-                    <span class="skill-name">LATEX</span>
-                </div>
-                <div class="skill-card">
                     <img src="/images/npm.svg" alt="NPM" class="skill-icon" />
                     <span class="skill-name">NPM</span>
                 </div>
@@ -101,6 +97,10 @@
                     <span class="skill-name">Blender</span>
                 </div>
                 <div class="skill-card">
+                    <img src="/images/inkscape.svg" alt="Inkscape" class="skill-icon" />
+                    <span class="skill-name">Inkscape</span>
+                </div>
+                <div class="skill-card">
                     <img src="/images/office.svg" alt="Office" class="skill-icon" />
                     <span class="skill-name">Office</span>
                 </div>
@@ -112,10 +112,19 @@
         </section>
         <section id="profile">
             <h2>Profile</h2>
-            <p>-who am i
-                -hobbys
-                -backgrounds
-                -why am into coding
+            <p>
+                I am a junior developer based in Mexico with a degree in computer systems engineering, passionate
+                about learning and exploring web development. I have experience in front-end technologies like HTML,
+                CSS, and JavaScript, focusing on building responsive web pages and enhancing user interfaces.
+            </p>
+            <p>
+                I am familiar with version control systems like Git, which help me manage my projects
+                effectively. I also have an interest in design and use tools like Krita and Blender for creative
+                projects.
+            </p>
+            <p>
+                I am always eager to contribute to exciting projects and collaborate with others in a team-oriented
+                environment. Feel free to check out my work and reach out if you're interested in connecting!
             </p>
         </section>
         <section id="blogs">
@@ -130,16 +139,16 @@
 
     <footer>
         <div class="contact-info">
-            <a href="mailto:robypsx@gmail.com" aria-label="Email">
+            <a href="mailto:robypsx@gmail.com" aria-label="Email" title="Send me an email">
                 <img src="/images/gmail.svg" alt="Gmail" class="contact-icon" />
             </a>
-            <a href="https://github.com/charliepsx" target="_blank" aria-label="GitHub">
+            <a href="https://github.com/charliepsx" target="_blank" aria-label="GitHub" title="View my GitHub profile">
                 <img src="/images/github.svg" alt="GitHub" class="contact-icon" />
-            </a> 
-            <a aria-label="CV">
+            </a>
+            <a aria-label="CV" title="Download my Curriculum">
                 <img src="/images/pdf.svg" alt="CV" class="contact-icon" />
                 <span>Download CV</span>
-            </a> 
+            </a>
         </div>
     </footer>
 
