--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
     <header>
         <nav class="side-nav" aria-label="Main Navigation">
             <a href="#home" aria-label="Go to Home">
-                <p>Home</p>
+                <img src="/images/home.svg" alt="Home">
             </a>
             <a href="#profile" aria-label="Go to Profile">
-                <p>Profile</p>
+                <img src="/images/profile.svg" alt="Profile">
             </a>
-            <a href="#blogs" aria-label="Go to Blogs">
-                <p>Blogs</p>
+            <a href="#projects" aria-label="Go to Blogs">
+                <img src="/images/projects.svg" alt="Projects">
             </a>
+        </nav>
+        <nav class="side-nav-left">
+            <a href="index_es.html"><p>ES</p></a>
         </nav>
     </header>
 
@@ -127,8 +130,8 @@
                 environment. Feel free to check out my work and reach out if you're interested in connecting!
             </p>
         </section>
-        <section id="blogs">
-            <h2>Blogs</h2>
+        <section id="projects">
+            <h2>Projects</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis explicabo deserunt saepe alias, et sit
                 minus perspiciatis aut facere possimus placeat non ratione dolore accusamus ab expedita id earum totam.
             </p>
@@ -145,9 +148,8 @@
             <a href="https://github.com/charliepsx" target="_blank" aria-label="GitHub" title="View my GitHub profile">
                 <img src="/images/github.svg" alt="GitHub" class="contact-icon" />
             </a>
-            <a aria-label="CV" title="Download my Curriculum">
-                <img src="/images/pdf.svg" alt="CV" class="contact-icon" />
-                <span>Download CV</span>
+            <a href="#" aria-label="CV" title="Download my Curriculum">
+                <img src="/images/pdf.svg" alt="CV" class="contact-icon" />CV
             </a>
         </div>
     </footer>
