--- a/index.html
+++ b/index.html
@@ -1,161 +1,284 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Portfolio</title>
+        <link rel="stylesheet" href="/css/styles.css" />
+    </head>
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="/css/styles.css">
-</head>
+    <body>
+        <header>
+            <nav class="side-nav" aria-label="Main Navigation">
+                <a href="#home" aria-label="Go to Home">
+                    <img src="/images/home.svg" alt="Home" />
+                </a>
+                <a href="#profile" aria-label="Go to Profile">
+                    <img src="/images/profile.svg" alt="Profile" />
+                </a>
+                <a href="#projects" aria-label="Go to Blogs">
+                    <img src="/images/projects.svg" alt="Projects" />
+                </a>
+            </nav>
+            <nav class="side-nav-left">
+                <a href="index_es.html"><p>ES</p></a>
+            </nav>
+        </header>
 
-<body>
-    <header>
-        <nav class="side-nav" aria-label="Main Navigation">
-            <a href="#home" aria-label="Go to Home">
-                <img src="/images/home.svg" alt="Home">
-            </a>
-            <a href="#profile" aria-label="Go to Profile">
-                <img src="/images/profile.svg" alt="Profile">
-            </a>
-            <a href="#projects" aria-label="Go to Blogs">
-                <img src="/images/projects.svg" alt="Projects">
-            </a>
-        </nav>
-        <nav class="side-nav-left">
-            <a href="index_es.html"><p>ES</p></a>
-        </nav>
-    </header>
+        <main class="container">
+            <section id="home">
+                <div
+                    id="canvas-container"
+                    aria-label="3D Model Placeholder"
+                ></div>
+                <h1>
+                    Hi there! I'm Charlie,<br />a
+                    <span class="animated-text">
+                        <span style="--i: 1">J</span
+                        ><span style="--i: 2">r</span
+                        ><span style="--i: 3">.</span>
+                        <span style="--i: 4">d</span
+                        ><span style="--i: 5">e</span
+                        ><span style="--i: 6">v</span
+                        ><span style="--i: 7">e</span
+                        ><span style="--i: 8">l</span
+                        ><span style="--i: 9">o</span
+                        ><span style="--i: 10">p</span
+                        ><span style="--i: 11">e</span
+                        ><span style="--i: 12">r</span>
+                    </span>
+                    based in Mexico. <br />
+                    Explore my skills and projects below.
+                </h1>
+            </section>
 
-    <main class="container">
-        <section id="home">
-            <div id="canvas-container" aria-label="3D Model Placeholder"></div>
-            <h1>Hi there! I'm Charlie,<br>a <span class="animated-text">
-                    <span style="--i: 1">J</span><span style="--i: 2">r</span><span style="--i: 3">.</span>
-                    <span style="--i: 4">d</span><span style="--i: 5">e</span><span style="--i: 6">v</span><span
-                        style="--i: 7">e</span><span style="--i: 8">l</span><span style="--i: 9">o</span><span
-                        style="--i: 10">p</span><span style="--i: 11">e</span><span style="--i: 12">r</span>
-                </span> based in Mexico. <br> Explore my skills and projects below.</h1>
-        </section>
+            <section id="skills">
+                <div class="skills-container">
+                    <div class="skill-card">
+                        <img
+                            src="/images/javascript.svg"
+                            alt="JavaScript"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">JavaScript</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/html.svg"
+                            alt="HTML"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">HTML</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/css.svg"
+                            alt="CSS"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">CSS</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/markdown.svg"
+                            alt="Markdown"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Markdown</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/bootstrap.svg"
+                            alt="Bootstrap"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Bootstrap</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/npm.svg"
+                            alt="NPM"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">NPM</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/node.svg"
+                            alt="Node"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Node</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/git.svg"
+                            alt="Git"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Git</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/github.svg"
+                            alt="Github"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Github</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/vscode.svg"
+                            alt="VSCode"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">VSCode</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/trello.svg"
+                            alt="Trello"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Trello</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/slack.svg"
+                            alt="Slack"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Slack</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/discord.svg"
+                            alt="Discord"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Discord</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/krita.svg"
+                            alt="Krita"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Krita</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/blender.svg"
+                            alt="Blender"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Blender</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/inkscape.svg"
+                            alt="Inkscape"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Inkscape</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/office.svg"
+                            alt="Office"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Office</span>
+                    </div>
+                    <div class="skill-card">
+                        <img
+                            src="/images/drive.svg"
+                            alt="Drive"
+                            class="skill-icon"
+                        />
+                        <span class="skill-name">Drive</span>
+                    </div>
+                </div>
+            </section>
+            <section id="profile">
+                <h2>Profile</h2>
+                <p>
+                    I am a junior developer based in Mexico with a degree in
+                    computer systems engineering, passionate about learning and
+                    exploring web development. I have experience in front-end
+                    technologies like HTML, CSS, and JavaScript, focusing on
+                    building responsive web pages and enhancing user interfaces.
+                </p>
+                <p>
+                    I am familiar with version control systems like Git, which
+                    help me manage my projects effectively. I also have an
+                    interest in design and use tools like Krita and Blender for
+                    creative projects.
+                </p>
+                <p>
+                    I am always eager to contribute to exciting projects and
+                    collaborate with others in a team-oriented environment. Feel
+                    free to check out my work and reach out if you're interested
+                    in connecting!
+                </p>
+            </section>
+            <section id="projects">
+                <h2>Projects</h2>
+                <div class="card-container">
+                    <div class="card">
+                        <p>Short description of Project 1.</p>
+                    </div>
+                    <div class="card">
+                        <p>Short description of Project 2.</p>
+                    </div>
+                    <div class="card">
+                        <p>Short description of Project 3.</p>
+                    </div>
+                    <div class="card">
+                        <p>Short description of Project 4.</p>
+                    </div>
+                </div>
+            </section>
 
-        <section id="skills">
-            <div class="skills-container">
-                <div class="skill-card">
-                    <img src="/images/javascript.svg" alt="JavaScript" class="skill-icon" />
-                    <span class="skill-name">JavaScript</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/html.svg" alt="HTML" class="skill-icon" />
-                    <span class="skill-name">HTML</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/css.svg" alt="CSS" class="skill-icon" />
-                    <span class="skill-name">CSS</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/markdown.svg" alt="Markdown" class="skill-icon" />
-                    <span class="skill-name">Markdown</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/bootstrap.svg" alt="Bootstrap" class="skill-icon" />
-                    <span class="skill-name">Bootstrap</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/npm.svg" alt="NPM" class="skill-icon" />
-                    <span class="skill-name">NPM</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/node.svg" alt="Node" class="skill-icon" />
-                    <span class="skill-name">Node</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/git.svg" alt="Git" class="skill-icon" />
-                    <span class="skill-name">Git</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/github.svg" alt="Github" class="skill-icon" />
-                    <span class="skill-name">Github</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/vscode.svg" alt="VSCode" class="skill-icon" />
-                    <span class="skill-name">VSCode</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/trello.svg" alt="Trello" class="skill-icon" />
-                    <span class="skill-name">Trello</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/slack.svg" alt="Slack" class="skill-icon" />
-                    <span class="skill-name">Slack</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/discord.svg" alt="Discord" class="skill-icon" />
-                    <span class="skill-name">Discord</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/krita.svg" alt="Krita" class="skill-icon" />
-                    <span class="skill-name">Krita</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/blender.svg" alt="Blender" class="skill-icon" />
-                    <span class="skill-name">Blender</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/inkscape.svg" alt="Inkscape" class="skill-icon" />
-                    <span class="skill-name">Inkscape</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/office.svg" alt="Office" class="skill-icon" />
-                    <span class="skill-name">Office</span>
-                </div>
-                <div class="skill-card">
-                    <img src="/images/drive.svg" alt="Drive" class="skill-icon" />
-                    <span class="skill-name">Drive</span>
-                </div>
+            <br /><br /><br /><br />
+        </main>
+
+        <footer>
+            <div class="contact-info">
+                <a
+                    href="mailto:robypsx@gmail.com"
+                    aria-label="Email"
+                    title="Send me an email"
+                >
+                    <img
+                        src="/images/gmail.svg"
+                        alt="Gmail"
+                        class="contact-icon"
+                    />
+                </a>
+                <a
+                    href="https://github.com/charliepsx"
+                    target="_blank"
+                    aria-label="GitHub"
+                    title="View my GitHub profile"
+                >
+                    <img
+                        src="/images/github.svg"
+                        alt="GitHub"
+                        class="contact-icon"
+                    />
+                </a>
+                <a href="#" aria-label="CV" title="Download my Curriculum">
+                    <img
+                        src="/images/pdf.svg"
+                        alt="CV"
+                        class="contact-icon"
+                    />CV
+                </a>
             </div>
-        </section>
-        <section id="profile">
-            <h2>Profile</h2>
-            <p>
-                I am a junior developer based in Mexico with a degree in computer systems engineering, passionate
-                about learning and exploring web development. I have experience in front-end technologies like HTML,
-                CSS, and JavaScript, focusing on building responsive web pages and enhancing user interfaces.
-            </p>
-            <p>
-                I am familiar with version control systems like Git, which help me manage my projects
-                effectively. I also have an interest in design and use tools like Krita and Blender for creative
-                projects.
-            </p>
-            <p>
-                I am always eager to contribute to exciting projects and collaborate with others in a team-oriented
-                environment. Feel free to check out my work and reach out if you're interested in connecting!
-            </p>
-        </section>
-        <section id="projects">
-            <h2>Projects</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis explicabo deserunt saepe alias, et sit
-                minus perspiciatis aut facere possimus placeat non ratione dolore accusamus ab expedita id earum totam.
-            </p>
-        </section>
+        </footer>
 
-        <br><br><br><br>
-    </main>
-
-    <footer>
-        <div class="contact-info">
-            <a href="mailto:robypsx@gmail.com" aria-label="Email" title="Send me an email">
-                <img src="/images/gmail.svg" alt="Gmail" class="contact-icon" />
-            </a>
-            <a href="https://github.com/charliepsx" target="_blank" aria-label="GitHub" title="View my GitHub profile">
-                <img src="/images/github.svg" alt="GitHub" class="contact-icon" />
-            </a>
-            <a href="#" aria-label="CV" title="Download my Curriculum">
-                <img src="/images/pdf.svg" alt="CV" class="contact-icon" />CV
-            </a>
-        </div>
-    </footer>
-
-    <script src="/js/script.js"></script>
-    <script type="module" src="src/main.js"></script>
-</body>
-
+        <script src="/js/script.js"></script>
+        <script type="module" src="src/main.js"></script>
+    </body>
 </html>
