--- a/index_es.html
+++ b/index_es.html
@@ -30,7 +30,7 @@
             <a href="https://github.com/charliepsx" target="_blank" aria-label="GitHub" title="View my GitHub profile">
                 <img src="/images/github.svg" alt="GitHub"/>
             </a>
-            <a href="/assets/cv.pdf" target="_blank" aria-label="CV" title="Download my Curriculum">
+            <a href="assets/cv.pdf" target="_blank" aria-label="CV" title="Download my Curriculum">
                 <img src="/images/cv.svg" alt="CV"/>
             </a>
         </nav>
