--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Portfolio</title>
-        <link rel="icon" type="image/svg+xml" href="/images/favicon.svg" width="24">
-      <script type="module" crossorigin src="/assets/main-CJzMXZYn.js"></script>
-      <link rel="stylesheet" crossorigin href="/assets/main-CN72ze1V.css">
+        <link rel="icon" type="image/svg+xml" href="/portfolio/images/favicon.svg" width="24">
+      <script type="module" crossorigin src="/portfolio/assets/main-DEgBPRCF.js"></script>
+      <link rel="stylesheet" crossorigin href="/portfolio/assets/main-CN72ze1V.css">
     </head>
     <body>
         <div id="root"></div>
